# homework

./: .classpath  .gitignore  .project  CMakeLists.txt  OS第一次实验例会1.doc  OS第一次实验例会2.doc  OS第一次实验例会3.doc  OS第一次实验例会4.doc  README.md  a.txt  audio_2_str.py  bicycle.sql  bison.y  canvas.py  common.h  compile.cbp  compile.depend  compile.layout  context.py  convert.py  data.py  deployment.txt  err.c  err.cpp  err.h  error.c  execOuterCmd.c  execute.c  global.h  historyView.py  image.py  inference.py  input_test.txt  lex.c  lex.cpp  lex.h  logic.vcxproj  logic.vcxproj.filters  main.c  main.cpp  (+38 more)
ALSPainter/: mainwindow.py  signals.py
ALSPainter/client/: GanpaintClient.py  __init__.py  preset_ops.json  readme.txt
ALSPainter/dock/: palette.py  preview.py
ALSPainter/tool/: names.py  toolproperties.py  translation.py
ALSPainter/voice/: audio_2_str.py
ALSPainter/window/: mainwidget.py
WebContent/: account.jsp  exception.jsp  face_login.jsp  faq.jsp  grid.jsp  index.jsp  login.jsp  maintain.jsp  manager.jsp  plans.jsp  purchase.jsp  register.jsp  user.jsp
WebContent/WEB-INF/: web.xml
WebContent/js/: webcam.js
bicycle/: .gitignore
client/: GanpaintClient.py
cnn_face_landmark_detect/: data.py
codeblocks/: logic.cbp  logic.depend
complie/: err.cpp  lex.cpp  main.cpp  midcode.cpp  objcode.cpp  opt.cpp  syntax.cpp
doc/: index.html
dock/: historyView.py  palette.py  submit.py
fcn_face_landmark_detect/: train.py
ftps/src/: TODO  (+2 more)
lang/: en
logic/: .gitignore
os-shell/: Demo.c  global.h  shell.lex
random_walk_seg/: .gitignore  README.md  mainwindow.py
src/: common.h  error.c  lex.c  main.c  main.cpp  midcode.c  run.c  syntax.c  util.c
tool/: brushes.py
utils/: loss_function.py
voice/: voiceControl.py
vsproject/: logic.vcxproj  logic.vcxproj.filters
window/: canvas.py  scrollarea.py
(+156 files in other folders)
